--- a/common.css
+++ b/common.css
@@ -14,6 +14,10 @@
   position: relative;
   padding: 150px 100px 0;
 }
+.left-main-div h2{
+color: white;
+  font-size: 45px;
+}
 
 #logo {
   width: 145px;
@@ -255,6 +259,7 @@
     flex-direction: column;
     height: auto;
     padding: 20px;
+    gap: 30px;
   }
 
   .left-main-div {
